--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pyshark==0.6
 scapy==2.5.0
 chromadb==0.5.23
 requests==2.31.0
-supabase==2.3.4
+supabase>=2.24.0
 python-dotenv==1.0.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
