--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-python-multipart==0.0.6
+fastapi==0.121.0
+uvicorn[standard]==0.34.0
+python-multipart==0.0.20
 pyshark==0.6
-scapy==2.5.0
-chromadb==0.5.23
-requests==2.31.0
-supabase>=2.24.0
-python-dotenv==1.0.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
-aiofiles==23.2.1
+scapy==2.6.1
+chromadb==1.3.4
+requests==2.32.3
+supabase==2.24.0
+python-dotenv==1.0.1
+pydantic==2.12.4
+pydantic-settings==2.7.0
+aiofiles==24.1.0
