--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,17 @@
 # Supabase Configuration
+# Get these from: https://supabase.com/dashboard > Your Project > Settings > API
+# Format: https://[project-ref].supabase.co (must be a valid 20-character project reference)
 SUPABASE_URL=your_supabase_url_here
 SUPABASE_KEY=your_supabase_anon_key_here
+
+# Frontend Configuration (for Vite-based frontends - should match SUPABASE_URL and SUPABASE_KEY)
+VITE_SUPABASE_URL=your_supabase_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Ollama Configuration
 OLLAMA_BASE_URL=http://130.232.102.188:11434
 OLLAMA_EMBEDDING_MODEL=nomic-embed-text
 OLLAMA_LLM_MODEL=llama3.2
 
-# VirusTotal Configuration
+# VirusTotal Configuration (optional - leave as-is if not using VirusTotal)
 VIRUSTOTAL_API_KEY=your_virustotal_api_key_here
