--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,14 @@ OLLAMA_BASE_URL=http://130.232.102.188:11434
 OLLAMA_EMBEDDING_MODEL=nomic-embed-text
 OLLAMA_LLM_MODEL=llama3.2
 
+# Embedding Method Configuration
+# Options: "ollama" (traditional text embedding) or "huggingface" (JSON-optimized embedding)
+# Recommendation: Use "huggingface" for better forensic query results
+EMBEDDING_METHOD=ollama
+
+# HuggingFace Model Configuration (only used if EMBEDDING_METHOD=huggingface)
+# Popular options: all-MiniLM-L6-v2 (recommended), paraphrase-MiniLM-L3-v2 (faster), BAAI/bge-small-en-v1.5 (better quality)
+HUGGINGFACE_MODEL=all-MiniLM-L6-v2
+
 # VirusTotal Configuration (optional - leave as-is if not using VirusTotal)
 VIRUSTOTAL_API_KEY=your_virustotal_api_key_here
