--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ pydantic==2.12.4
 pydantic-settings==2.7.0
 aiofiles==24.1.0
 rank-bm25==0.2.2
+sentence-transformers==2.5.1
+torch==2.2.1
+transformers==4.38.1
